--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -42,7 +42,7 @@
                     </li>
                 </ul>
                 <div class="mt-1">
-                    <a class="read-more-link" href="/admin/prototype/conditions">Browse all Conditions for {{project.name}} »</a>
+                    <a class="read-more-link" href="/admin/prototype/conditions">Browse all Environment Conditions for {{project.name}} »</a>
                 </div>
             </section>
 
