--- a/modules/prototype/client/views/documents.html
+++ b/modules/prototype/client/views/documents.html
@@ -16,7 +16,7 @@
 
         <main class="col-sm-12 col-md-7 col-lg-8">
             <section class="page-narrative">
-                <p>Content Here</p>
+                <p>Coming soon.</p>
             </section>
         </main>
     </div>
