--- a/modules/core/server/views/prototype.layout.view.html
+++ b/modules/core/server/views/prototype.layout.view.html
@@ -19,11 +19,6 @@
 		crossorigin="anonymous">
 	<link id="mainstyle" href="modules/prototype/client/styles/prototype.css" rel="stylesheet" />
 
-	<!-- SCRIPTS -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
-		crossorigin="anonymous"></script>
-
 </head>
 
 <body class="ng-cloak">
@@ -51,7 +46,8 @@
 	<!-- Application JavaScript Files -->
 	{% for jsFile in jsAppFiles %}<script type="text/javascript" src="{{jsFile}}"></script>{% endfor %}
 
-	<script type="text/javascript" src="/dist/conf.js"> </script>
+	<script type="text/javascript" src="/dist/conf.js"></script>
+
 	<script type="text/javascript">
 		// little hack to force the main style to get refreshed when we enter the prototype.
 		var links = document.getElementsByTagName("link");
@@ -66,6 +62,10 @@
 	{% if livereload %}
 	<!--Livereload script rendered -->
 	<script type="text/javascript" src="{{host}}:35729/livereload.js"></script> {% endif %}
+
+	<!-- SCRIPTS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
 </body>
 
