--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -20,6 +20,7 @@
                 <div class="content" ng-bind-html="project.ceDetails.description"></div>
             </section>
 
+            <!--
             <section>
                 <h2>Compliance Oversight &nbsp;<em>(Jan 1 &ndash; Sept 30, 2016)</em></h2>
                 <ul class="ce-blocks block-container clearfix">
@@ -51,7 +52,10 @@
                     </li>
                 </ul>
             </section>
+            -->
+
             <section>
+                <h2>Compliance Oversight &nbsp;<em>(Jan 1 &ndash; Sept 30, 2016)</em></h2>
 
                 <ul class="nav nav-tabs">
                     <li class="nav-item active">
