PROTOTYPE: topics page, change binding of subtopic counts from inspections count, to conditions count.

--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -31,13 +31,13 @@
                             <span class="title">
                                 <span class="primary">{{subtopic.name}}</span>
                             </span>
-                            <span class="metric">{{subtopic.inspections.length}}</span>
+                            <span class="metric">{{subtopic.conditions.length}}</span>
                         </a>
                         <span class="block disabled" ng-hide="subtopic.name === 'Tailings Management'">
                             <span class="title">
                                 <span class="primary">{{subtopic.name}}</span>
                             </span>
-                            <span class="metric">{{subtopic.inspections.length}}</span>
+                            <span class="metric">{{subtopic.conditions.length}}</span>
                         </span>
                     </li>
                 </ul>
