--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -74,6 +74,34 @@
                             <i class="material-icons md-18">file_download</i>
                         </span>
                     </a>
+                    
+                     <a class="list-group-item list-group-item-action" href="https://mem-mmt-test.pathfinder.gov.bc.ca/api/document/582a2d5348077f0017feb5a0/fetch" target="_blank">
+                        <span class="avatar"><i class="material-icons md-18">insert_drive_file</i></span>
+                        <span class="title">
+                            <span class="primary">{{project.authorizations[2].type}} (Environmental Management Act)</span>
+                        </span>
+                        <span class="actions">
+                            <i class="material-icons md-18">file_download</i>
+                        </span>
+                     </a>
+
+                     <a class="list-group-item list-group-item-action" href="https://mem-mmt-test.pathfinder.gov.bc.ca/api/document/582a2d5348077f0017feb5a1/fetch" target="_blank">
+                        <span class="avatar"><i class="material-icons md-18">insert_drive_file</i></span>
+                        <span class="title">
+                            <span class="primary">{{project.authorizations[0].type}} (Environmental Management Act)</span>
+                        </span>
+                        <span class="actions">
+                            <i class="material-icons md-18">file_download</i>
+                        </span>
+                     </a>
+
+                    <a class="list-group-item list-group-item-action" href="https://mem-mmt-test.pathfinder.gov.bc.ca/api/document/582a2d5348077f0017feb5a2/fetch" target="_blank">
+                        <span class="avatar"><i class="material-icons md-18">insert_drive_file</i></span>
+                        <span class="title"><span class="primary">{{project.authorizations[1].type}} (Environmental Management Act)</span></span>
+                        <span class="actions">
+                            <i class="material-icons md-18">file_download</i>
+                        </span>
+                    </a> 
                 </div>
             </section>
 
