--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -71,6 +71,8 @@
                    <!-- INSPECTIONS TAB CONTENT -->
                     <div class="tab-pane active" id="inspections" role="tabpanel">
                 
+                        <p>Inspections of the Mount Milligan mine conducted by staff from the Ministry of Energy and Mines, Ministry of Environment and Environmental Assessment Office are listed below. Click the links for more information on individual inspections.</p>
+
                         <div class="title-bar">
                             <h3>Showing {{tableParamsInspectionsStats.first}} - {{tableParamsInspectionsStats.last}} of {{tableParamsInspectionsStats.totalCount}}</h3>
                             <div class="filters">
@@ -116,6 +118,9 @@
 
                     <!-- ACTIONS TAB CONTENT -->
                     <div class="tab-pane" id="actions" role="tabpanel">
+
+                        <p>Compliance &amp; enforcement actions (e.g., orders, warnings, tickets) of the Ministry of Energy and Mines, Ministry of Environment and Environmental Assessment Office for the Mount Milligan mine are listed below. Click the links for more information on individual actions.</p>
+
                         <div class="title-bar">
                             <h3>Showing {{tableParamsActionsStats.first}} - {{tableParamsActionsStats.last}} of {{tableParamsActionsStats.totalCount}}</h3>
                             <div class="filters">
