Prototype Modifications - Fixed an issue where the conditionNo was not displaying in conditions-main.html - Added ng-if where no supporting documents were available (condition.html)

--- a/modules/prototype/client/styles/components/ce-grid.scss
+++ b/modules/prototype/client/styles/components/ce-grid.scss
@@ -80,6 +80,10 @@
             line-height: 1.2rem;
         }
 
+        ol {
+            margin-bottom: 0;
+        }
+
         li {
             margin-bottom: 1rem;
 
