--- a/modules/prototype/client/views/condition.html
+++ b/modules/prototype/client/views/condition.html
@@ -20,7 +20,7 @@
             <section class="page-narrative">
                 <p ng-bind-html="condition.conditionText"></p>
             </section>
-            <section>
+            <section ng-if="document in condition.supportDocuments">
                 <h2>Supporting Documents</h2>
                 <ul class="resource-list resource-list-lg list-group">
                     <li class="list-group-item list-group-item-action" ng-repeat="document in condition.supportDocuments">
