--- a/modules/users/client/views/user-entry.html
+++ b/modules/users/client/views/user-entry.html
@@ -40,11 +40,10 @@
 					<input class="form-control" id="displayName" disabled=true type="text" ng-model="user.displayName" ng-hide="readonly">
 				</div>
 			</div>
-			<div class="col-sm-6 col-md-3">
-				<div class="form-group" x-show-errors>
-					<label for="username" class="control-label">Username<em ng-if="mode === 'add'">(Required)</em></label>
-					<p ng-show="readonly" class="form-control-static">{{ user.username }}</p>
-					<input class="form-control" id="username" name="username" type="text" ng-model="user.username" required ng-disabled="mode === 'edit'" ng-hide="readonly">
+			<div class="col-sm-6 col-md-3" ng-show="mode === 'edit'">
+				<div class="form-group">
+					<label class="control-label">Username</label>
+					<p class="form-control-static">{{ user.username }}</p>
 				</div>
 			</div>
 		</div>
@@ -55,11 +54,15 @@
 			<div class="checkbox-row">
 				<div class="checkbox-inline">
 					<label class="control-label" for="viaEmail">
-						<input type="checkbox" ng-model="user.viaEmail" id="viaEmail" name="viaEmail" ng-disabled="readonly"/>By Email</label>
+						<input type="radio" ng-model="user.viaEmail" ng-value="true" ng-checked="user.viaEmail" ng-click="setPreferredContactMethod('viaEmail')" id="viaEmail" name="viaEmail" ng-disabled="readonly"/>
+						&nbsp;By Email
+					</label>
 				</div>
 				<div class="checkbox-inline">
 					<label class="control-label" for="viaMail">
-						<input type="checkbox" ng-model="user.viaMail" id="viaMail" name="viaMail"  ng-disabled="readonly"/>By Mail</label>
+						<input type="radio" ng-model="user.viaMail" ng-value="true" ng-checked="user.viaMail" ng-click="setPreferredContactMethod('viaMail')" id="viaMail" name="viaMail"  ng-disabled="readonly"/>
+						&nbsp;By Mail
+					</label>
 				</div>
 			</div>
 		</div><!--/ CONTACT PREFERENCES -->
@@ -68,14 +71,14 @@
 		<div class="row">
 			<div class="col-sm-6 col-md-3">
 				<div class="form-group" x-show-errors>
-					<label class="control-label" for="email">Email<em class="required" ng-if="user.viaEmail">(Required)</em></label>
+					<label class="control-label" for="email">Email<em ng-if="user.viaEmail">(Required)</em></label>
 					<p ng-show="readonly" class="form-control-static">{{ user.email }}</p>
 					<input class="form-control" placeholder="myname@example.com" id="email" name="email" type="email" ng-model="user.email" ng-required="user.viaEmail" ng-hide="readonly">
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">
 				<div class="form-group" x-show-errors>
-					<label for="phoneNumber" class="control-label">Phone<em class="required">(Required)</em></label>
+					<label for="phoneNumber" class="control-label">Phone</label>
 					<p ng-show="readonly" class="form-control-static">{{ user.phoneNumber }}</p>
 					<input class="form-control" placeholder="eg: 123-456-7890" id="phoneNumber" name="phoneNumber" type="text" ng-model="user.phoneNumber" ng-hide="readonly">
 				</div>
@@ -96,43 +99,11 @@
 			</div>
 		</div>
 
-		<!-- City, Province, Country, Postal Code -->
-		<div class="row">
-			<div class="col-sm-6 col-md-3">
-				<div class="form-group"x-show-errors>
-					<label for="city" class="control-label">City<em class="required" ng-if="user.viaMail">(Required)</em></label>
-					<p ng-show="readonly" class="form-control-static">{{ user.city }}</p>
-					<input class="form-control" id="city" name="city" type="text" ng-model="user.city" ng-required="user.viaMail === true" ng-hide="readonly">
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-3">
-				<div class="form-group" x-show-errors>
-					<label for="province" class="control-label">Province<em class="required" ng-if="user.viaMail">(Required)</em></label>
-					<p ng-show="readonly" class="form-control-static">{{ user.province }}</p>
-					<input class="form-control" id="province" name="province" type="text" ng-model="user.province" ng-required="user.viaMail === true" ng-hide="readonly">
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-3">
-				<div class="form-group" x-show-errors>
-					<label for="country" class="control-label">Country<em class="required" ng-if="user.viaMail">(Required)</em></label>
-					<p ng-show="readonly" class="form-control-static">{{ user.country }}</p>
-					<input class="form-control" id="country" name="country" type="text" ng-model="user.country" ng-required="user.viaMail === true" ng-hide="readonly">
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-3">
-				<div class="form-group" x-show-errors>
-					<label for="postalCode" class="control-label">Postal Code<em class="required" ng-if="user.viaMail">(Required)</em></label>
-					<p ng-show="readonly" class="form-control-static">{{ user.postalCode }}</p>
-					<input class="form-control" id="postalCode" name="postalCode" type="text" ng-model="user.postalCode" ng-required="user.viaMail === true" ng-hide="readonly">
-				</div>
-			</div>
-		</div>
-
 		<!-- Street Address -->
 		<div class="row">
 			<div class="col-sm-12 col-md-6">
 				<div class="form-group" x-show-errors>
-					<label for="address1" class="control-label">Street Address 1<em class="required" ng-if="user.viaMail">(Required)</em></label>
+					<label for="address1" class="control-label">Street Address 1<em ng-if="user.viaMail">(Required)</em></label>
 					<p ng-show="readonly" class="form-control-static">{{ user.address1 }}</p>
 					<input class="form-control" id="address1" name="address1" type="text" ng-model="user.address1" ng-required="user.viaMail" ng-hide="readonly">
 				</div>
@@ -145,6 +116,38 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- City, Province, Country, Postal Code -->
+		<div class="row">
+			<div class="col-sm-6 col-md-3">
+				<div class="form-group"x-show-errors>
+					<label for="city" class="control-label">City<em ng-if="user.viaMail">(Required)</em></label>
+					<p ng-show="readonly" class="form-control-static">{{ user.city }}</p>
+					<input class="form-control" id="city" name="city" type="text" ng-model="user.city" ng-required="user.viaMail" ng-hide="readonly">
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<div class="form-group" x-show-errors>
+					<label for="province" class="control-label">Province/State<em ng-if="user.viaMail">(Required)</em></label>
+					<p ng-show="readonly" class="form-control-static">{{ user.province }}</p>
+					<input class="form-control" id="province" name="province" type="text" ng-model="user.province" ng-required="user.viaMail" ng-hide="readonly">
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<div class="form-group" x-show-errors>
+					<label for="country" class="control-label">Country<em ng-if="user.viaMail">(Required)</em></label>
+					<p ng-show="readonly" class="form-control-static">{{ user.country }}</p>
+					<input class="form-control" id="country" name="country" type="text" ng-model="user.country" ng-required="user.viaMail" ng-hide="readonly">
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-3">
+				<div class="form-group" x-show-errors>
+					<label for="postalCode" class="control-label">Postal Code/Zip Code<em ng-if="user.viaMail">(Required)</em></label>
+					<p ng-show="readonly" class="form-control-static">{{ user.postalCode }}</p>
+					<input class="form-control" placeholder="eg: A1A 1A1" id="postalCode" name="postalCode" type="text" ng-model="user.postalCode" ng-required="user.viaMail" ng-hide="readonly">
+				</div>
+			</div>
+		</div>
 	</fieldset><!-- / CONTACT INFO -->
 
 	<!-- ORGANIZATIONAL INFO -->
@@ -152,9 +155,9 @@
 		<legend>Organization Details</legend>
 		<div class="row">
 			<div class="col-md-4">
-				<div class="form-group">
-					<label class="control-label">Name</label>
-					<p class="form-control-static">{{ user.org.name }}</p>
+				<div class="form-group" x-show-errors>
+					<label for="orgName" class="control-label">Name<em>(Required)</em></label>
+					<input class="form-control" id="orgName" name="orgName" type="text" ng-model="user.org.name" required disabled>
 				</div>
 			</div>
 			<div class="col-sm-6 col-md-3">
@@ -199,7 +202,7 @@
 		<div class="form-group no-margin">
 			<label class="control-label">Signature</label>
 			<div class="signature-preview form-control">
-				<img src="{{internalControl.signatureHREF}}" id="sig" name="sig"/>
+				<img ng-if="user.signature" src="{{internalControl.signatureHREF}}" id="sig" name="sig"/>
 			</div>
 			<a class="btn btn-default btn-sm" ng-hide="readonly"
 			   x-modal-set-signature>
