--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -16,7 +16,8 @@
         <main class="col-sm-12 col-md-8">
 
              <section class="has-read-more ce-narrative">
-                <input class="toggle-link" type="checkbox"/>
+                <input class="toggle-link" type="checkbox" id="readmore" />
+                <label class="toggle-link-label" for="readmore"></label>
                 <div class="content" ng-bind-html="project.ceDetails.description"></div>
             </section>
 
