--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -20,7 +20,8 @@
         <main class="col-sm-12 col-md-7 col-lg-8">
         
             <section class="has-read-more subtopic-narrative">
-                <input class="toggle-link" type="checkbox"/>
+                <input class="toggle-link" type="checkbox" id="readmore" />
+                <label class="toggle-link-label" for="readmore"></label>
                 <div class="content" ng-bind-html="subtopic.description"></div>
             </section>
 
