--- a/modules/prototype/client/views/project-main.html
+++ b/modules/prototype/client/views/project-main.html
@@ -20,7 +20,8 @@
         <main class="col-sm-12 col-md-8">
 
             <section class="has-read-more project-narrative">
-                <input class="toggle-link" type="checkbox" />
+                <input class="toggle-link" type="checkbox" id="readmore" />
+                <label class="toggle-link-label" for="readmore"></label>
                 <div class="content" ng-bind-html="project.description"></div>
             </section>
 
