--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -18,7 +18,8 @@
         <main class="col-sm-12 col-md-7 col-lg-8">
         
             <section class="has-read-more">
-                <input class="toggle-link" type="checkbox"/>
+                <input class="toggle-link" type="checkbox" id="readmore" />
+                <label class="toggle-link-label" for="readmore"></label>
                 <div class="content" ng-bind-html="topic.description"></div>
             </section>
 
