--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -42,6 +42,9 @@
 
                     <!-- CONDITIONS TAB CONTENT -->
                     <div class="tab-pane active" id="conditions" role="tabpanel">
+
+                        <p>Conditions related to tailings management found in the Environmental Assessment certificate/amendment and Mines Act and Environmental Management Act permits/amendments for Mount Milligan mine are listed below. Click the links for more information on individual conditions.</p>
+
                         <div class="title-bar">
                             <h3>Showing {{tableParamsConditionsStats.first}} - {{tableParamsConditionsStats.last}} of {{tableParamsConditionsStats.totalCount}}</h3>
                             <div class="filters">
@@ -79,6 +82,9 @@
 
                     <!-- INSPECTIONS TAB CONTENT -->
                     <div class="tab-pane" id="inspections" role="tabpanel">
+
+                        <p>Inspections related to tailings management at Mount Milligan mine conducted by staff from the Ministry of Energy and Mines, Ministry of Environment and Environmental Assessment Office are listed below. Click the links for more information on individual inspections.</p>
+
                        <div class="title-bar">
                             <h3>Showing {{tableParamsInspectionsStats.first}} - {{tableParamsInspectionsStats.last}} of {{tableParamsInspectionsStats.totalCount}}</h3>
                             <div class="filters">
@@ -121,6 +127,9 @@
 
                     <!-- ACTIONS TAB CONTENT -->
                     <div class="tab-pane" id="actions" role="tabpanel">
+
+                        <p>Compliance &amp; enforcement actions (e.g., orders, warnings, tickets) of the Ministry of Energy and Mines, Ministry of Environment and Environmental Assessment Office for tailings management at the Mount Milligan mine are listed below. Click the links for more information on individual actions.</p>
+
                         <div class="title-bar">
                             <h3>Showing {{tableParamsActionsStats.first}} - {{tableParamsActionsStats.last}} of {{tableParamsActionsStats.totalCount}}</h3>
                             <div class="filters">
