--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -25,6 +25,8 @@
 
             <section>
                 <h2>Environment Conditions</h2>
+                <p>Explore the sub-topic areas below to learn more about environmental oversight of Mount Milligan, including project-specific conditions, inspections and actions.</p>
+
                 <ul class="ce-blocks block-container clearfix">
                     <li ng-repeat="subtopic in topic.subtopics">
                         <a class="block block-hover" ng-show="subtopic.name === 'Tailings Management'"
