PROTOTYPE: need  target="_blank" for all downloadable links.

--- a/modules/prototype/client/views/ce-inspection.html
+++ b/modules/prototype/client/views/ce-inspection.html
@@ -39,7 +39,7 @@
                                 <i class="material-icons">insert_drive_file</i>
                             </div>
                             <span class="title">
-                                <a class="primary" href="{{inspection.followupDocumentUrl}}">Download Mine Manager's Response - {{inspection.inspectionId}}</a>
+                                <a class="primary" href="{{inspection.followupDocumentUrl}}" target="_blank">Download Mine Manager's Response - {{inspection.inspectionId}}</a>
                             </span>
                             <span class="actions">
                                 <i class="material-icons">file_download</i>
