--- a/modules/prototype/client/views/condition.html
+++ b/modules/prototype/client/views/condition.html
@@ -28,7 +28,7 @@
                             <i class="material-icons">insert_drive_file</i>
                         </div>
                         <span class="title">
-                            <a class="primary" href="{{document.url}}">{{document.name}}{{documenturl}}</a>
+                            <a class="primary" href="{{document.url}}" target="_blank">{{document.name}}{{documenturl}}</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons">file_download</i>
