--- a/modules/prototype/client/views/ce-action.html
+++ b/modules/prototype/client/views/ce-action.html
@@ -34,7 +34,7 @@
                             <i class="material-icons">insert_drive_file</i>
                         </div>
                         <span class="title">
-                            <a class="primary" ng-ref="{{action.documentUrl}}" target="_blank">Download Inspection Report - {{action.inspectionId}}</a>
+                            <a class="primary" href="{{action.documentUrl}}" target="_blank">Download Inspection Report - {{action.inspectionId}}</a>
                         </span>
                         <span class="actions">
                             <i class="material-icons">file_download</i>
