--- a/modules/prototype/client/views/ce-main.html
+++ b/modules/prototype/client/views/ce-main.html
@@ -151,8 +151,8 @@
             <section class="card">
                 <h2 class="card-title">External Links</h2>
                 <ul class="resource-list resource-list-sm list-group">
-                    <li class="list-group-item"><a href="#" target="_blank">Mining Compliance &amp; Enforcement</a></li>
-                    <li class="list-group-item"><a href="#" target="_blank">Environmental Assessment Office Compliance &amp; Enforcement</a></li>
+                    <li class="list-group-item"><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/compliance-enforcement" target="_blank">Mining Compliance &amp; Enforcement</a></li>
+                    <li class="list-group-item"><a href="http://www.eao.gov.bc.ca/compliance.html" target="_blank">Environmental Assessment Office Compliance &amp; Enforcement</a></li>
                 </ul>
             </section>
             
