Prototype Fixes - Adding missing link for related documents

--- a/modules/prototype/client/views/subtopic.html
+++ b/modules/prototype/client/views/subtopic.html
@@ -174,7 +174,7 @@
             <section class="card">
                 <h2 class="card-title">Related Documents</h2>
                 <div class="resource-list resource-list-sm list-group">
-                    <a class="list-group-item list-group-item-action" href="#">
+                    <a class="list-group-item list-group-item-action" href="https://mem-mmt-test.pathfinder.gov.bc.ca/api/document/5836163ba15bdd00191f85d3/fetch" target="_blank">
                         <span class="avatar">
                             <i class="material-icons md-18">insert_drive_file</i>
                         </span>
@@ -189,7 +189,7 @@
             </section>
 
             <section class="card">
-                <h2 class="card-title">Links of Interest</h2>
+                <h2 class="card-title">External Links</h2>
                 <ul class="resource-list resource-list-sm list-group">
                     <li class="list-group-item"><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/geotechnical-information" target="_blank">Ministry of Energy &amp; Mines Geotechnical Information</a></li>
                     <li class="list-group-item"><a href="https://news.gov.bc.ca/releases/2016MEM0018-001393" target="_blank">News Release: British Columbia Now a Global Leader on Mine Tailings Storage Regulations</a></li>
