--- a/modules/prototype/client/views/topic.html
+++ b/modules/prototype/client/views/topic.html
@@ -109,7 +109,7 @@
             </section>
 
             <section class="card">
-                <h2 class="card-title">Links of Interest</h2>
+                <h2 class="card-title">External Links</h2>
                 <ul class="resource-list resource-list-sm list-group">
                     <li class="list-group-item"><a href="http://www.eao.gov.bc.ca/" target="_blank">British Columbia Environmental Assessment Office</a></li>
                     <li class="list-group-item"><a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_project_home_285.html" target="_blank">Mount Milligan Environmental Assessment</a></li>
